add img setting

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,9 @@ id: demo
 <textarea id="txt-content" data-autosave="editor-content" autofocus required>
 <p>Simditor is a browser-based WYSIWYG text editor.
 </p><p>It is used by <a href="http://tower.im">Tower</a> -- a popular project management web application.
-</p><p>Supported Browsers: IE10+、Chrome、Firefox、Safari.</p>
+</p>
+<p><img alt="Image" src="http://simditor.tower.im/assets/images/logo.png" width="auto" class="" style="width: auto;"><br></p>
+<p>Supported Browsers: IE10+、Chrome、Firefox、Safari.</p>
 <ul>
   <li><a href="https://github.com/mycolorway/simditor/releases" target="_blank" class="">Download Zip</a></li>
   <li>Install with npm: $ npm install simditor</li>
